--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,7 @@
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
+    --purple: rgba(131, 115, 255, 0.70);
     --muted-foreground: 0 0% 45.1%;
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
@@ -32,6 +33,7 @@
   }
 
   .dark {
+    --purple: rgba(131, 115, 255, 0.70);
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
@@ -62,8 +64,23 @@
 @layer base {
   * {
     @apply border-border;
+    -webkit-font-smoothing: antialiased;
   }
   body {
     @apply bg-background text-foreground;
+    height: 100vh;
+    font-family: var(--font-roboto);
+    
+    
+    
+  }
+
+  main {
+    min-height: 100vh;
+  }
+
+  h1,h2,h3 {
+    font-family: var(--font-source-sans);
+    font-weight: bold;
   }
 }
