--- a/app/globals.css
+++ b/app/globals.css
@@ -70,6 +70,7 @@
     @apply bg-background text-foreground;
     height: 100vh;
     font-family: var(--font-roboto);
+    overflow-x: hidden;
     
     
     
